fixed footer bar from overlapping content

--- a/PopcornPicksClient/src/app/app.component.css
+++ b/PopcornPicksClient/src/app/app.component.css
@@ -170,3 +170,14 @@
     vertical-align: center;
     
   }
+
+  #container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100vh;
+  }
+
+  #content {
+    flex: 1;
+  }
